# example-auth-fastapi

./: .env.example  .gitignore  Makefile  README.md  devbox.json  lefthook.yml  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: linting.yml  test.yml  typecheck.yml  unused.yml
app/: __init__.py  main.py
app/routes/: root.py
lib/: auth.py  config.py  guard.py  message.py
templates/: index.html  layout.html  profile.html
templates/auth/logout/: success.html
test/: test_app.py
