[project]
name = "example-fastapi-auth"
version = "0.0.0"
description = "FastAPI application demonstrating ZITADEL authentication with PKCE using Authlib"
requires-python = ">=3.10"
dependencies = [
  "FastAPI>=0.110,<1.0",
  "Authlib>=1.3.2,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn>=0.29,<1.0",
  "itsdangerous>=2.0.0,<3.0.0",
  "jinja2>=3.0.0,<4.0.0",
  "python-multipart>=0.0.20,<0.1.0"
]

[project.urls]
repository = "https://github.com/zitadel/example-fastapi-auth"

[dependency-groups]
dev = [
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "ruff>=0.12.4",
  "fawltydeps==0.19.0",
  "ty>=0.0.4",
  "httpx>=0.28.0,<0.29.0",
]

[tool.ty.environment]
python-version = "3.10"
root = ["."]

[tool.ty.src]
respect-ignore-files = true
include = ["app"]
exclude = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
cache_dir = ".pytest"
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
addopts = [
  "--cov=app",
  "--cov=lib",
  "--cov-report=html:build/coverage/html",
  "--cov-report=xml:build/coverage/clover.xml",
]
junit_family = "xunit2"

[tool.coverage.run]
data_file = "build/coverage/.coverage"
omit = []

[tool.ruff]
cache-dir = ".ruff"
line-length = 130
fix = true
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "N", "Q", "S", "T"]
extend-select = ["A"]
ignore = ["S101"]  # Ignore assert statements

[tool.fawltydeps]
ignore_undeclared = [
  "starlette",
]
ignore_unused = [
  "fawltydeps",
  "requests",
  "pytest-cov",
  "pytest",
  "ruff",
  "httpx",
  "python-multipart",
  "itsdangerous",
  "jinja2",
  "ty"
]
